--- a/ilvvsion.dev/public_html/.htaccess
+++ b/ilvvsion.dev/public_html/.htaccess
@@ -2,3 +2,5 @@ AuthType Basic
 AuthName "Restricted Content"
 AuthUserFile /etc/apache2/.htpasswd
 Require valid-user
+
+ErrorDocument 404 /404.html
